Unreviewed, suppress exception checks https://bugs.webkit.org/show_bug.cgi?id=304806 rdar://167372482

* Source/JavaScriptCore/runtime/JSMicrotask.cpp:
(JSC::asyncGeneratorReject):
(JSC::asyncGeneratorResumeNext):

Canonical link: https://commits.webkit.org/305018@main